<?xml version="1.0"?>
<package format="3">
  <name>test_package</name>
  <version>1.0.0</version>
  <description>A test package</description>
  <url>http://wiki.ros.org/</url>

  <author email="test@test.com">Tester</author>
  <maintainer email="test@test.com">Tester</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <depend>zlib</depend>
  <depend>uuid</depend>
  <depend>curl</depend>
  <depend>libssl-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
